# hcv-secrets-scanner

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  test_secrets.json
hcv_secrets_scanner/: hcv_secrets_scanner.py
hcvss/: __init__.py  __main__.py  api.py  cli.py  constants.py  hcvss.py
test/: test_hcvss.py
tests/: test_api.py  test_hcvss.py
