[project]
name = "hcvss"
version = "0.1.0"
description = "CLI tool that checks the integrity of your Hashicorp Vault secrets"
authors = [{ name = "Brian Thompson", email = "brianrobt@pm.me" }]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
dependencies = ["hvac", "hvac[parser]", "requests", "typer"]

[project.urls]
"Homepage" = "https://github.com/brianrobt/hcv-secrets-scanner"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hcv-secrets-scanner"
version = "0.1.0"
description = "CLI tool that checks the integrity of your Hashicorp Vault secrets"
authors = ["Brian Thompson <brianrobt@pm.me>"]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
typer = { extras = ["all"], version = "^0.7.0" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true

[tool.poetry.scripts]
hcvss = "hcvss.cli:app"
